# taskgraph

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh
.github/workflows/: release.yml
docs/: ARCHITECTURE.md
src/: lib.rs  main.rs
src/cli/: artifact.rs  events.rs  mod.rs  project.rs  task.rs
src/db/: artifacts.rs  dependencies.rs  effects.rs  events.rs  files.rs  meta.rs  mod.rs  notes.rs  projects.rs  schema.rs  sweeper.rs  tasks.rs  tests.rs
src/mcp/: handler.rs  mod.rs  protocol.rs  server.rs  tools.rs
src/models/: artifact.rs  dependency.rs  event.rs  mod.rs  note.rs  project.rs  task.rs
src/server/: mod.rs  routes.rs  sse.rs
tests/: functional_test.sh
