[package]
name = "taskgraph"
version = "0.1.0"
edition = "2021"
description = "Task graph primitive for AI agent orchestration"
license = "Apache-2.0"
repository = "https://github.com/BudEcosystem/taskgraph"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime (for server mode)
tokio = { version = "1", features = ["full"] }

# HTTP server (optional, for serve mode)
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# ID generation
ulid = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# YAML parsing (for task batch import)
serde_yaml = "0.9"

# Async stream trait (required for SSE)
futures-core = "0.3"

# MCP SDK (rmcp)
rmcp = { version = "1.1", default-features = false, features = ["server", "transport-io", "transport-streamable-http-server"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip debug info
